<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.FirebaseActivity" >

    <ImageView
        android:id="@+id/weatherIconInDb"
        android:layout_width="102dp"
        android:layout_height="62dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:paddingLeft="20sp"
                android:text="@string/studentId"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/studentId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="name"
                android:inputType="number"
                android:text="2002" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:paddingLeft="20sp"
                android:text="@string/studentName"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/studentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="email"
                android:inputType="textEmailAddress"
                android:text="Mohamed" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:paddingLeft="20sp"
                android:text="@string/studentFathers_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/studentFathersName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="address"
                android:inputType="textPersonName"
                android:text="Abdullah" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:paddingLeft="20sp"
                android:text="@string/studentSurname"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/studentSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="phone"
                android:inputType="phone"
                android:text="Fayed" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/studentNational_ID"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/studentNationalId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="317777777777" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/studentGender"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/mRadioBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7sp"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/GenderM" />

                <RadioButton
                    android:id="@+id/fRadioBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7sp"
                    android:gravity="center"
                    android:text="@string/GenderF" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:text="@string/studentDate_of_birth"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dataDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dateHint"
                android:paddingLeft="20sp"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13sp"
        android:gravity="center">

        <Button
            android:id="@+id/viewAllBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7sp"
            android:text="@string/viewAllBTN" />

        <Button
            android:id="@+id/viewByIdBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7sp"
            android:text="@string/viewByIdBTN" />

        <Button
            android:id="@+id/dateBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7sp"
            android:text="@string/dateBTN" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center|fill_vertical">

        <Button
            android:id="@+id/insertBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center"
            android:text="@string/insertBttn" />

        <Button
            android:id="@+id/updateBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center"
            android:text="@string/updateBTN" />

        <Button
            android:id="@+id/deleteBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center"
            android:text="@string/deleteBttn" />

    </TableRow>

    <Button
        android:id="@+id/goToFbListBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/goToStudentListBTN" />

    <Button
        android:id="@+id/goToSQLiteBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/goToSQLiteBTN" />

</LinearLayout>