<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.WeatherMainActivity">

    <!--display the temperature-->

    <!--display the weather description-->

    <ImageView
        android:id="@+id/weatherIconInSQLite"
        android:layout_width="102dp"
        android:layout_height="62dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center">

            <TextView
                android:id="@+id/temperatureTv"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textSize="70sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center">

            <TextView
                android:id="@+id/cityTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="no weather"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center">

            <TextView
                android:id="@+id/weatherTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="no weather"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center">

            <TextView
                android:id="@+id/humidityTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="no humidity"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40sp"
            android:gravity="center"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weatherTv"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center">

            <EditText
                android:id="@+id/weatherEt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/weatherEt"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center">

            <Button
                android:id="@+id/getWeatherBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getWeatherBTN" />
        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/goToFirebaseBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goToFirebaseTN"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.122"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.577" />

        <Button
            android:id="@+id/goToSQLiteBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goToSQLiteBTN"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.846"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.574" />

        <Button
            android:id="@+id/goToFbListBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goToStudentListBTN"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.813" />

        <Button
            android:id="@+id/goToSQLiteListBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goToSQListBTN"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/goToFbListBTN"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.815" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>